--- a/SaludApp/Templates/SaludApp/otros.html
+++ b/SaludApp/Templates/SaludApp/otros.html
@@ -4,8 +4,14 @@
 
 {% block contenidoQueCambia %}
 
-    <h1>Otros profesionales</h1>
-    <p>Info de los otros profesionales</p>
+<h1>Otros profesionales de la salud</h1>
+<p>Registrate en nuestra base de datos:</p>
+
+    <form action="{% url 'agregar-otro' %}" method="post">
+        {% csrf_token %}
+        {{form.as_p}}
+        <input type="submit" value="Agregar">
+    </form>
 
   
 
