Agrego formulario de búsqueda

--- a/SaludApp/Templates/SaludApp/inicio.html
+++ b/SaludApp/Templates/SaludApp/inicio.html
@@ -6,10 +6,11 @@
 
 
     
-    <h1>Buscá a tu profesional</h1>
+    <h1>¡Bienvenido!</h1>
   
 
-    <h3>Médicos incorporados en nuestra base de datos:</h3>
+    <h4>Si sos Profesional de la Salud o Paciente de este sistema, registrate usando el menú superior.</h4>
+    <h4>Si querés buscar médicos registrados de una determinada especialidad, usá "Buscar por Especialidad".</h4>
 
 
 {% endblock %}
