--- a/SaludApp/Templates/SaludApp/otros.html
+++ b/SaludApp/Templates/SaludApp/otros.html
@@ -5,7 +5,7 @@
 {% block contenidoQueCambia %}
 
 <h1>Otros profesionales de la salud</h1>
-<p>Registrate en nuestra base de datos:</p>
+<p>Registrate en nuestra base de datos</p>
 
     <form action="{% url 'agregar-otro' %}" method="post">
         {% csrf_token %}
