--- a/SaludApp/Templates/SaludApp/padre.html
+++ b/SaludApp/Templates/SaludApp/padre.html
@@ -28,7 +28,7 @@
                 <a class="navbar-brand" href="{% url 'Pacientes' %}">Pacientes</a>
                 <a class="navbar-brand" href="{% url 'Medicos' %}">Médicos</a>
                 <a class="navbar-brand" href="{% url 'Otros' %}">Otros profesionales</a>
-                <a class="btn btn-primary" href="#NADAAUN">INICIAR</a>
+                <a class="btn btn-primary" href="{% url 'buscar-medico' %}">BUSCAR POR ESPECIALIDAD</a>
             </div>
         </nav>
 
