--- a/SaludApp/Templates/SaludApp/pacientes.html
+++ b/SaludApp/Templates/SaludApp/pacientes.html
@@ -5,7 +5,7 @@
 {% block contenidoQueCambia %}
 
 <h1>Pacientes</h1>
-    <p>Registrate en nuestra base de datos:</p>
+    <p>Registrate en nuestra base de datos</p>
 
         <form action="{% url 'agregar-paciente' %}" method="post">
             {% csrf_token %}
